associate sink to specific track class